[package]
name = "pofo_adr"
version = "0.1.0"
authors = ["Simon Rupf <simon@rupf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
crossterm = "0.17.7"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
